<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom_Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="patient_action_settings">Settings</string>
    <string name="patient_logout">Logout</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_settings">Settings</string>


    <string name="patient_checkin_text">Check In</string>
    <string name="action_doctor_sign_in">LOGIN AS DOCTOR</string>
    <string name="action_patient_sign_in">LOGIN AS PATIENT</string>
    <string name="doctor_action_refresh_patients">Refresh Patients</string>

    <string name="doctor_patient_details_tab_title">Details</string>
    <string name="doctor_patient_medications_tab_title">Medications</string>
    <string name="doctor_patient_checkins_tab_title">Check-ins</string>
    <string name="patient_checkin_list_time_format">%s</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_patient_list">Patients</string>
    <string name="title_patient_detail">Patient Detail</string>
    <string name="my_patients_button_text">My Patients</string>
    <string name="title_recent_checkins">Recent Checkins</string>
    <string name="title_all_patients_last_checkin">Last Checkin</string>

    <string name="checkin_detail_pain_label">Pain</string>
    <string name="checkin_detail_eating_label">Eating</string>
    <string name="checkin_detail_time_format">Check-in @ %s</string>
    <string name="checkin_medications_table_label">Medications</string>

</resources>
