<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sharathp.symptom_management.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:medicationId="@+medicationId/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:medicationId="@+medicationId/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:medicationId="@+medicationId/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <EditText android:medicationId="@+medicationId/username" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_username"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:medicationId="@+medicationId/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">

                <Button android:medicationId="@+medicationId/doctor_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_doctor_sign_in"
                    android:textStyle="bold" android:layout_weight="1" />

                <Button android:medicationId="@+medicationId/patient_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_patient_sign_in"
                    android:textStyle="bold" android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>