<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" >

    <TableLayout android:id="@+id/checkin_details_table"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true" >
        <TableRow>
            <TextView
                android:text="@string/checkin_detail_pain_label"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/checkin_pain_text_view"
                android:text="N/A"
                android:layout_marginLeft="15dp" />
            <ImageView
                android:id="@+id/pain_image_view"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/pain_high"
                android:contentDescription="High Pain" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:text="@string/checkin_detail_eating_label"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/checkin_eating_text_view"
                android:text="N/A"
                android:layout_marginLeft="15dp" />
            <ImageView
                android:id="@+id/eat_image_view"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/eat_cannot"
                android:contentDescription="Cannot eat"/>
        </TableRow>
    </TableLayout>

    <TextView android:id="@+id/checkin_medications_table_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/checkin_details_table"
        android:text="@string/checkin_medications_table_label"
        android:textStyle="bold" />

    <TableLayout android:id="@+id/checkin_medications_table"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/checkin_medications_table_label"
                 android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true" />

</RelativeLayout>